Product Category views models controllers

--- a/src/app/templates/app/base.html
+++ b/src/app/templates/app/base.html
@@ -15,51 +15,90 @@
 </head>
 <body>
     {% comment %} Navbar Start  {% endcomment %}
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">
+            <img src="{% static "app/images/logo.png" %}" height="50" width="100" />
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Accueil</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
+
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Produits
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'ML' %}">Lait</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'CR' %}">Café</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'MS' %}">Sucre</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'LS' %}">Best Milk</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'GH' %}">Confiture</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'PN' %}">Sardine</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'CS' %}">Corne de boeuf</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'IC' %}">Salade</a></li>
                 </ul>
               </li>
+
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link text-white" href="#">A Propos</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">Contact</a>
+              </li>
+              
+              
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input class="form-control me-2" type="search" placeholder="Recherche" aria-label="Search">
+              <button class="btn btn-outline-primary" type="submit">Chercher</button>
             </form>
           </div>
+
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown mx-2">
+              <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Sieky
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li><a class="dropdown-item" href="#">Commande</a></li>
+                <li><a class="dropdown-item" href="#">Changer <br> Mot de passe</a></li>
+                <li><a class="dropdown-item" href="#">Deconnexion</a></li>
+              </ul>
+            </li>
+            <li class="nav-item mx-2">
+                <a class="nav-link text-white" href="#">Carte 4</a>
+            </li>
+            <li class="nav-item mx-2">
+                <a class="nav-link text-white" href="#">Panier 4</a>
+            </li>
+            <li class="nav-item mx-2">
+                <a class="nav-link text-white" href="#">Connexion</a>
+            </li>
+            <li class="nav-item mx-2">
+                <a class="nav-link text-white" href="#">Inscription</a>
+            </li>
+          </ul>
+
         </div>
       </nav>
     {% comment %} Navbar End  {% endcomment %}
 
     {% comment %} Content Start  {% endcomment %}
+    {% block banner-slider %}{% endblock banner-slider %}
+    {% block information %}{% endblock information %}
     {% block main-content %}{% endblock main-content %}
     {% comment %} Content End  {% endcomment %}
     
     {% comment %} Footer Start  {% endcomment %}
-    <footer>
-        Copytight - 2023 : Develop By SIEKYIT
+    <footer class="container-fluid fixed-bottom bg-success text-center p-2 mt-5">
+        Copytight - 2023 || Develop By SIEKYIT
     </footer>
     {% comment %} Footer End  {% endcomment %}
 
