--- a/src/app/templates/app/home.html
+++ b/src/app/templates/app/home.html
@@ -1,8 +1,110 @@
 {% extends 'app/base.html' %}
 {% load static %}
-
 {% block title %}Accueil{% endblock title %}
 
+{% block banner-slider %}
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="{% static 'app/images/banner/b1.jpg' %}" class="d-block w-100" alt="banner image">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'app/images/banner/b2.jpg' %}" class="d-block w-100" alt="banner image">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'app/images/banner/b3.jpg' %}" class="d-block w-100" alt="banner image">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'app/images/banner/b4.jpg' %}" class="d-block w-100" alt="banner image">
+      </div>
+    </div>
+  </div>
+{% endblock banner-slider %}
+
+
+{% block information %}
+<div class="container">
+    <div class="row bg-success text-center p-5 text-white border-bottom shadow">
+        <h1>Produits</h1>
+        <small class="fs-5">
+            Bienvenue sur notre site eCommerce d'alimentation générale, votre destination en ligne pour des produits alimentaires de qualité et des produits de première nécessité. Notre boutique en ligne propose une large gamme de produits frais, de produits secs, de boissons, de produits d'hygiène et bien plus encore, pour répondre à tous vos besoins alimentaires et ménagers.
+        </small>
+    </div>
+</div>
+{% endblock information %}
+
+
 {% block main-content %}
-    <h1>Bienvenu Sur Mon SIte Ecommerce</h1>
+    <div class="container">
+        <br /><br />
+        <h2 class="text-center">Denrées Alimentaires ClShop</h2>
+        <br /><br />
+        <div class="row container">
+            <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
+                <div class="goodnesssec buttermilk smbg">
+                    <a href="#">
+                        <div class="goodnessseccont text-center">
+                            <img src="{% static 'app/images/product/buffalo-ghee.png' %}" class="img-responsive" alt="" />
+                            <p class="mlkpro">Lait</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
+                <div class="goodnesssec buttermilk smbg">
+                    <a href="#">
+                        <div class="goodnessseccont text-center">
+                            <img src="{% static 'app/images/product/cow-ghee.png' %}" class="img-responsive" alt="" />
+                            <p class="mlkpro">Lait</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
+                <div class="goodnesssec buttermilk smbg">
+                    <a href="#">
+                        <div class="goodnessseccont text-center">
+                            <img src="{% static 'app/images/product/cow-milk.png' %}" class="img-responsive" alt="" />
+                            <p class="mlkpro">Lait</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <br /><br />
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <a href="#">
+                    <div class="goodnessseccont text-center">
+                        <img src="{% static 'app/images/product/paneer-lite.png' %}" class="card-img-top" alt="" />
+                        <p class="mlkpro">Chocolat</p>
+                    </div>
+                </a>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <a href="#">
+                    <div class="goodnessseccont text-center">
+                        <img src="{% static 'app/images/product/paneer-lite.png' %}" class="card-img-top" alt="" />
+                        <p class="mlkpro">Chocolat</p>
+                    </div>
+                </a>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <a href="#">
+                    <div class="goodnessseccont text-center">
+                        <img src="{% static 'app/images/product/paneer-lite.png' %}" class="card-img-top" alt="" />
+                        <p class="mlkpro">Chocolat</p>
+                    </div>
+                </a>
+              </div>
+            </div>
+        </div>
+    </div>
+    <br /><br />
+    
 {% endblock main-content %}
