Display product and category

--- a/src/app/templates/app/base.html
+++ b/src/app/templates/app/base.html
@@ -34,14 +34,13 @@
                   Produits
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{% url 'category' 'ML' %}">Lait</a></li>
-                  <li><a class="dropdown-item" href="{% url 'category' 'CR' %}">Café</a></li>
-                  <li><a class="dropdown-item" href="{% url 'category' 'MS' %}">Sucre</a></li>
-                  <li><a class="dropdown-item" href="{% url 'category' 'LS' %}">Best Milk</a></li>
-                  <li><a class="dropdown-item" href="{% url 'category' 'GH' %}">Confiture</a></li>
-                  <li><a class="dropdown-item" href="{% url 'category' 'PN' %}">Sardine</a></li>
-                  <li><a class="dropdown-item" href="{% url 'category' 'CS' %}">Corne de boeuf</a></li>
-                  <li><a class="dropdown-item" href="{% url 'category' 'IC' %}">Salade</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'FL' %}">Fruits et légumes</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'VP' %}">Viande et poisson</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'LT' %}">Laitages</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'PB' %}">Pain et boulangerie</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'CO' %}">Céréales et œufs</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'BS' %}">Boissons</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'PE' %}">Produits d'épicerie</a></li>
                 </ul>
               </li>
 
