--- a/src/app/templates/app/category.html
+++ b/src/app/templates/app/category.html
@@ -3,5 +3,37 @@
 {% block title %}Categorie{% endblock title %}
 
 {% block main-content %}
-    <h1>Categorie : {{val}}</h1>
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="list-group">
+                    {% for val in title %}
+                        <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                            {{ val.title }}
+                        </a>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="col-sm-9">
+                <div class="row">
+                    {% for prod in product %}
+                        <div class="col text-center mb-4">
+                            <a href="#" class="btn">
+                                <div>
+                                    <img src="{{prod.product_image.url}}" width="300px" height="200px" />
+                                    <div class="fw-bold">{{prod.title}}</div>
+                                    <div class="fw-bold text-danger">
+                                        GNF {{prod.discounted_price}}/-
+                                        <small class="fw-light text-decoration-line-through">{{prod.selling_price}}</small>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        
+    </div>
+
 {% endblock main-content %}
