--- a/src/app/templates/app/home.html
+++ b/src/app/templates/app/home.html
@@ -37,7 +37,7 @@
 {% block main-content %}
     <div class="container">
         <br /><br />
-        <h2 class="text-center">Denrées Alimentaires ClShop</h2>
+        <h2 class="text-center">ClShop Alimentation</h2>
         <br /><br />
         <div class="row container">
             <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
