product details, about and contact page

--- a/src/app/templates/app/home.html
+++ b/src/app/templates/app/home.html
@@ -42,7 +42,7 @@
         <div class="row container">
             <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
                 <div class="goodnesssec buttermilk smbg">
-                    <a href="#">
+                    <a href="{% url 'category' 'VP' %}">
                         <div class="goodnessseccont text-center">
                             <img src="{% static 'app/images/product/buffalo-ghee.png' %}" class="img-responsive" alt="" />
                             <p class="mlkpro">Lait</p>
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
                 <div class="goodnesssec buttermilk smbg">
-                    <a href="#">
+                    <a href="{% url 'category' 'LT' %}">
                         <div class="goodnessseccont text-center">
                             <img src="{% static 'app/images/product/cow-ghee.png' %}" class="img-responsive" alt="" />
                             <p class="mlkpro">Lait</p>
@@ -62,7 +62,7 @@
             </div>
             <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
                 <div class="goodnesssec buttermilk smbg">
-                    <a href="#">
+                    <a href="{% url 'category' 'VP' %}">
                         <div class="goodnessseccont text-center">
                             <img src="{% static 'app/images/product/cow-milk.png' %}" class="img-responsive" alt="" />
                             <p class="mlkpro">Lait</p>
@@ -75,7 +75,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
-                <a href="#">
+                <a href="{% url 'category' 'LT' %}">
                     <div class="goodnessseccont text-center">
                         <img src="{% static 'app/images/product/paneer-lite.png' %}" class="card-img-top" alt="" />
                         <p class="mlkpro">Chocolat</p>
@@ -85,7 +85,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <a href="#">
+                <a href="{% url 'category' 'VP' %}">
                     <div class="goodnessseccont text-center">
                         <img src="{% static 'app/images/product/paneer-lite.png' %}" class="card-img-top" alt="" />
                         <p class="mlkpro">Chocolat</p>
@@ -95,7 +95,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <a href="#">
+                <a href="{% url 'category' 'LT' %}">
                     <div class="goodnessseccont text-center">
                         <img src="{% static 'app/images/product/paneer-lite.png' %}" class="card-img-top" alt="" />
                         <p class="mlkpro">Chocolat</p>
