--- a/src/app/templates/app/base.html
+++ b/src/app/templates/app/base.html
@@ -45,10 +45,10 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">A Propos</a>
+                <a class="nav-link text-white" href="{% url 'about' %}">A Propos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Contact</a>
+                <a class="nav-link text-white" href="{% url 'contact' %}">Contact</a>
               </li>
               
               
