--- a/src/app/templates/app/contact.html
+++ b/src/app/templates/app/contact.html
@@ -47,9 +47,9 @@
     </div>
     <div class="col text-center">
         <ul class="list-group list-group-flush">
-        <li class="list-group-item">Adresse : </li>
-        <li class="list-group-item">Contact : </li>
-        <li class="list-group-item">Email : </li>
+          <li class="list-group-item">Adresse : Lambangny</li>
+          <li class="list-group-item">Contact : Lambangny Marché</li>
+          <li class="list-group-item">Email : 620 00 00 00</li>
         </ul>
     </div>
 </div>
