--- a/src/app/templates/app/productdetail.html
+++ b/src/app/templates/app/productdetail.html
@@ -18,10 +18,13 @@
                   <ul class="fs-5" style="font-family: Rajdhani;">
                     <li>{{product.description}}</li>
                   </ul>
-                  <div class="buttons row flex" style="font-family: Rajdhani;">
-                    <button type="submit" class="d-grid gap-2 btn1 btn btn-danger p-1 m-1 btn-lg text-decoration-none text-white">Ajouter au panier</button>
-                    <div class="btn btn-dark p-1 m-1 btn-lg"><a class="text-decoration-none text-white" href="#">Acheter</a></div>
-                  </div>
+                  
+                    <form action="/add-to-cart" class="d-inline">
+                      <input type="hidden" name="prod_id" value="{{product.id}}" />
+                      <button type="submit" class="btn btn-primary shadow px-5 py-2">Ajouter Au Panier</button>
+                    </form>
+                    <a href="{% url 'showcart' %}" class="btn btn-warning shadow px-5 py-2 ms-4">Acheter</a>
+                  
                   
                 </div>
               </div>
